Hide cells and lint

--- a/docs/guides/serverless-manage-resources.ipynb
+++ b/docs/guides/serverless-manage-resources.ipynb
@@ -2,6 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "98c9ba3e-e183-4e95-ab41-2e7b46a9a71a",
    "metadata": {},
    "source": [
     "# Manage Qiskit Serverless compute and data resources\n",
@@ -13,6 +14,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0b1e328c-c0b2-41d5-8a03-8625bba3959a",
    "metadata": {},
    "source": [
     "For classical tasks that can be parallelized, use the `@distribute_task` decorater to define compute requirements needed to perform a task. Start by recalling the `transpile_parallel.py` example from the [Write your first Qiskit Serverless program](./serverless-first-program) topic:"
@@ -21,7 +23,16 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "id": "2e8824d8-41cc-47fc-b42f-3aec8690d46b",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "remove-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "# This cell is hidden from users\n",
@@ -32,6 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "a3b54f11-6336-4385-90fb-ee1ccd37459e",
    "metadata": {},
    "outputs": [
     {
@@ -64,6 +76,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "0273d627-1ba3-4107-a9b8-6a0135547ed5",
    "metadata": {},
    "source": [
     "In this example, you decorated the `transpile_remote()` method with `@distribute_task(target={\"cpu\": 1})`. When run, this creates an asynchronous parallel worker task with a single CPU core, and returns with a reference to track the worker. To fetch the result, pass the reference to the `get()` method:"
@@ -72,6 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "79da6436-fdac-42bc-9065-116c3dca38cb",
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +118,16 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "id": "b54a47bb-9522-413e-b6a5-02859712b3e3",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "remove-cell"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -123,6 +146,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "934fe28a-f0fc-4331-90e3-41679b1ebaca",
    "metadata": {},
    "source": [
     "You can also create and run multiple parallel tasks as follows:"
@@ -131,6 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "0383ae42-a3e3-4567-8b80-c8bff9b2616e",
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +181,16 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "id": "b872a4b0-280a-41e8-8fa3-6a633ea64b2e",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "remove-cell"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -175,7 +209,16 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "id": "ad1914fa-bfd0-4aa0-936b-fa41bde6090e",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "remove-cell"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -220,6 +263,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "062db02d-862b-495d-8b90-dc2960bb8427",
    "metadata": {},
    "source": [
     "### Explore different task configurations\n",
@@ -234,6 +278,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "1fc1cc82-71c1-467e-bedb-465ed61a6dbe",
    "metadata": {},
    "outputs": [
     {
@@ -258,7 +303,16 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "id": "7aa5bcb1-ac02-49c7-bc2a-1b98bcb9db36",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "remove-cell"
+    ]
+   },
    "outputs": [],
    "source": [
     "# This cell is hidden from users\n",
@@ -268,6 +322,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "50ea5816-1fc7-4e83-998e-cb01e0fc4624",
    "metadata": {},
    "source": [
     "## Automatic QPU selection\n",
@@ -284,6 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "67eb3309-03ff-4c10-82b9-e90f49796814",
    "metadata": {},
    "outputs": [
     {
@@ -316,6 +372,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "7328d590-a667-4cce-bbdb-5c44b6afac87",
    "metadata": {},
    "source": [
     "You can also use the `IBMLeastBusyQPUSelector` to find a QPU that can support the circuit width but with the shortest queue."
@@ -324,6 +381,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "0b97e663-716b-4e2f-a91b-ff8dd256b540",
    "metadata": {},
    "outputs": [
     {
@@ -347,6 +405,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f53b0bf4-7275-4717-81ac-a205f99fd11e",
    "metadata": {},
    "source": [
     "## Manage data across your program\n",
@@ -362,6 +421,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "de39c5ec-bf97-42d4-bd52-8ad26890a662",
    "metadata": {},
    "outputs": [
     {
@@ -390,6 +450,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fb27e9bc-3db1-4a17-959a-c29b5f982ec2",
    "metadata": {},
    "source": [
     "Next, you can list all the files in your `data` directory. This data is accessible to all programs."
@@ -398,6 +459,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "7d7aebec-95df-4509-a1c6-b117476c0f12",
    "metadata": {},
    "outputs": [
     {
@@ -417,6 +479,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "1aa656cc-f6a8-43a9-9c84-f018d0a96608",
    "metadata": {},
    "source": [
     "This can be done from a program by using `file_download()` to download the file to the program environment, and uncompressing the `tar`."
@@ -425,6 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
+   "id": "8c3a7f05-1429-42ea-bb19-4356a6c618b1",
    "metadata": {},
    "outputs": [
     {
@@ -452,7 +516,16 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "id": "252f0990-5643-46d4-9a58-c77fb50d17f4",
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": [
+     "remove-cell"
+    ]
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -508,6 +581,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4ba0a4e5-35ab-4620-8b5b-b2844ec364e3",
    "metadata": {},
    "source": [
     "At this point, your program can interact with the files, as you would a local experiment. `file_upload()` , `file_download()`, and `file_delete()` can be called from your local experiment, or your uploaded program, for consistent and flexible data management."
@@ -515,6 +589,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c1bf6b41-67e6-4cc9-ab09-32e6d739fa35",
    "metadata": {},
    "source": [
     "## Next steps\n",
@@ -531,7 +606,7 @@
  "metadata": {
   "description": "Manage compute and data across your Qiskit pattern with Qiskit Serverless.",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -545,7 +620,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3"
   },
   "title": "Manage Qiskit Serverless compute and data resources"
  },
