--- a/docs/responsible-quantum-computing.mdx
+++ b/docs/responsible-quantum-computing.mdx
@@ -1,6 +1,6 @@
 ---
 title: Responsible quantum computing
-description: A review of the Responsible Quantum Principles at IBM, and how to report a Responsible Quantum Issue
+description: A review of the Responsible Quantum Principles at IBM
 
 ---
 
@@ -32,7 +32,7 @@ It is the responsibility of IBM Quantum employees and IBM Quantum leadership ali
 
 IBM Quantum is building a global quantum computing ecosystem. It is our responsibility to create an ecosystem that represents the diversity of the world at large, and be inclusive of people of all backgrounds, experiences, and abilities.
 
-We have several tools to ensure that our products are used responsibly as well. We monitor responses to this [Responsible Quantum Issue Report form](https://airtable.com/app1Nb37drhJb4ljK/shrHQJBat48X3WmfA) where you can flag any potential concerns about a quantum computing application or use case. Furthermore, in the [IBM Quantum End User Agreement](https://quantum.ibm.com/terms), please take note of three sections, which describe acceptable and responsible uses of IBM Quantum technology and services. 
+Please take note of three sections in the [IBM Quantum End User Agreement](https://quantum.ibm.com/terms) that describe acceptable and responsible uses of IBM Quantum technology and services. 
 
 > **9.b** *IBM Quantum may not be used for unlawful, obscene, offensive or fraudulent activity, such as advocating or causing harm, interfering with or violating the integrity or security of a network or system, evading filters, sending unsolicited, abusive, deceptive or disparaging messages, viruses or harmful code, violating third party rights, for the research, design, development, production, maintenance, repair, overhaul, or use of any offensive or defensive weapons of any kind, for attempting to defeat encryption, or for processing regulated data including personal information, financial data and health data. In addition, IBM may remove or refuse to accept or use any Content without limitation.*
 >
