Clear output rather than overwriting

--- a/docs/guides/serverless-manage-resources.ipynb
+++ b/docs/guides/serverless-manage-resources.ipynb
@@ -234,6 +234,7 @@
     "\n",
     "from qiskit.circuit.random import random_circuit\n",
     "from qiskit_serverless import IBMServerlessClient, QiskitFunction\n",
+    "from IPython.display import clear_output\n",
     "import time\n",
     "\n",
     "TITLE = \"transpile_remote_serverless_test\"  # TODO: Randomize names to avoid conflict\n",
@@ -257,7 +258,8 @@
     "        break\n",
     "    if status == \"ERROR\":\n",
     "        raise Exception(\"Something went wrong. See following serverless logs:\\n\\n\" + job.logs())\n",
-    "    print(f\"Job still running, waiting 5s then retrying ({retry})\", end=\"\\r\")\n",
+    "    clear_output()\n",
+    "    print(f\"Job still running, waiting 5s then retrying ({retry})\")\n",
     "    time.sleep(5)"
    ]
   },
@@ -575,7 +577,8 @@
     "        break\n",
     "    if status == \"ERROR\":\n",
     "        raise Exception(\"Something went wrong. See following serverless logs:\\n\\n\" + job.logs())\n",
-    "    print(f\"Job still running, waiting 5s then retrying ({retry})\", end=\"\\r\")\n",
+    "    clear_output()\n",
+    "    print(f\"Job still running, waiting 5s then retrying ({retry})\")\n",
     "    time.sleep(5)"
    ]
   },
