--- a/docs/guides/serverless-manage-resources.ipynb
+++ b/docs/guides/serverless-manage-resources.ipynb
@@ -579,7 +579,11 @@
     "        raise Exception(\"Something went wrong. See following serverless logs:\\n\\n\" + job.logs())\n",
     "    clear_output()\n",
     "    print(f\"Job still running, waiting 5s then retrying ({retry})\")\n",
-    "    time.sleep(5)"
+    "    time.sleep(5)\n",
+    "\n",
+    "# Clean up\n",
+    "Path(\"./source_files/transpile_parallel.py\").unlink()\n",
+    "Path(\"./transpile_demo.tar\").unlink()"
    ]
   },
   {
