Fix typo in IBM Circuit Function

--- a/docs/guides/ibm-circuit-function.ipynb
+++ b/docs/guides/ibm-circuit-function.ipynb
@@ -51,10 +51,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qiskit_ibm_catalog import QiskitFunctionCatalog\n",
+    "from qiskit_ibm_catalog import QiskitFunctionsCatalog\n",
     "\n",
-    "catalog = QiskitFunctionCatalog()\n",
-    "ibm_cf = catalog.load(\"ibm/circuit-function\")"
+    "catalog = QiskitFunctionsCatalog()\n",
+    "function = catalog.load(\"ibm/circuit-function\")"
    ]
   },
   {
