--- a/docs/guides/qiskit-code-assistant-vscode.mdx
+++ b/docs/guides/qiskit-code-assistant-vscode.mdx
@@ -22,14 +22,16 @@ Learn how to install, use, configure and uninstall the official Qiskit Code Assi
 
 To install the [VSCode extension](https://github.com/Qiskit/qiskit-code-assistant-vscode), follow these steps:
 
+Install directly from VSCode:
+
 1. Launch VS Code.
 1. Click the Extensions icon in the left toolbar.
-1. Search for `qiskit-vscode`
-1. Find "Qiskit Code Assistant" and click **Install**.
+1. Search for `qiskit`
+1. Find "Qiskit Code Assistant (Beta)" and click **Install**.
 
-The extension is also available through the [VSCode Marketplace](https://marketplace.visualstudio.com/items?itemName=qiskit.qiskit-vscode).
+Alternatively, the extension is also available through the [VSCode Marketplace](https://marketplace.visualstudio.com/items?itemName=qiskit.qiskit-vscode).
 
-After installing, reload the extension/IDE (typically, VSCode will prompt you to do this automatically). When it's ready, you will see "Qiskit Code Assistant" listed on the bottom of the VS Code window:
+When it's ready, you will see "Qiskit Code Assistant" listed on the bottom of the VS Code window, as shown.  If it is not listed, reload the extension or application.
 
 ![Qiskit Code Assistant is shown on the bottom of the VS Code window.](/images/guides/qiskit-code-assistant/vscode-selected-model.png)
 
@@ -37,11 +39,11 @@ After installing, reload the extension/IDE (typically, VSCode will prompt you to
 
 The following settings can be configured:
 
-- To change keyboard shortcuts, open the Keyboard Shortcuts settings (`Cmd/Ctrl+Shift+P` -> `Preferences: Open Keyboard Shortcuts`) and search for `qiskit-vscode`.
+- To change keyboard shortcuts, open the Keyboard Shortcuts settings (`Cmd/Ctrl`+`Shift`+`P` -> `Preferences: Open Keyboard Shortcuts (JSON)`) and search for `qiskit-vscode`.
 
-- You can change the IBM Quantum API token to use in the VSCode command palette. To do that, type `Cmd/Ctrl+Shift+P`, search for `qiskit`, select the **Qiskit Code Assistant: Set IBM Quantum API token** command, and paste your IBM Quantum API token.
+- You can change the IBM Quantum API token to use in the VSCode command palette. To do that, type `Cmd/Ctrl`+`Shift`+`P`, search for `qiskit`, select the **Qiskit Code Assistant: Set IBM Quantum API token** command, and paste your IBM Quantum API token.
 
-- [Advanced] To change the instance of the Qiskit Code Assistant Service that the extension should use, go to File > Preferences > Settings > User Settings and edit the `Qiskit Code Assistant: Url`.
+- [Advanced] To change the instance of the Qiskit Code Assistant Service that the extension should use, go to File -> Preferences -> Settings.  On the User tab,  search for Qiskit, and edit the `Qiskit Code Assistant: Url`.
 
 ## Get started using the Qiskit Code Assistant extension for VSCode
 
@@ -58,17 +60,34 @@ The first time you use the `granite-8b-qiskit` model, a modal opens listing some
 
 ![The window that opens upon first use contains restrictions tha must be accepted.](/images/guides/qiskit-code-assistant/eula.png)
 
-### Generate Code
-After accepting the EULA, you can open a new file and start coding. To get a code suggestion, type `Ctrl` + `.` as shown:
+### Generate code
+
+To get a code suggestion, type a prompt, then `Ctrl`+`.`.  There are two types of prompts you can use:
+
+  - Enter partial code and get a suggestion to finish the code.  Example:
+    ```python
+    from qiskit.circuit import QuantumCircuit
+    from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
+    from qiskit_ibm_runtime import SamplerV2 as Sampler
+    from qiskit_ibm_runtime.fake_provider import FakeManilaV2
+
+    # Bell Circuit
+    qc = QuantumCircuit(2)
+    qc.h(0)
+    qc.cx(0, 1)
+
+    qc.mea # Type Ctrl + . for a code suggestion.
+    ```
+  - Type a pound (#) sign, then type your prompt.  Example: # Give me a random circuit of 5 qubits and a depth of 4.
 
 ![A code suggestion is shown.  The suggested code is in grey.](/images/guides/qiskit-code-assistant/vscode-inline-suggestion.png)
 
-Press the `Tab` key to accept the model-generated suggestion or press the `ESC` key to reject it.
+Press `Tab` to accept the suggestion or press `ESC` to reject it.
 
 <Admonition type="tip" title="Tips for working with code suggestions">
 - Type `Ctrl` + `.` again to generate additional suggestions.
-- When a suggestion is shown, you can use `Alt/Option` + `]` and `Alt/Option + `[` to cycle forward and backward, respectively, through the suggestions (if available).
-- You can hover the cursor over the suggestion to use the pop-up toolbar to cycle through the suggestions, as shown:
+- When a suggestion is shown, you can use `Option/Alt` + `]` and `Option/Alt` + `[` to cycle forward and backward, respectively, through the suggestions (if available).
+- Hover the cursor over the suggestion to use the pop-up toolbar to cycle through the suggestions, as shown:
   ![The toolbar that pops up if you hover over suggested code is shown.](/images/guides/qiskit-code-assistant/vscode-inline-suggestion-toolbar.png)
 </Admonition>
 
@@ -84,10 +103,10 @@ To remove the Qiskit Code Assistant from VSCode, follow these steps:
 
 ## Troubleshooting
 
-If you are not seeing the extension status bar in VSCode, check that the extension is installed and enabled under the extensions tab.
+If you don't see the extension status bar in VSCode, check that the extension is installed and enabled under the extensions tab.
 
-If the extension is installed and enabled, but cannot select a model, verify that your current API Token has been added and the `Qiskit Code Assistant: Url` is properly set.
+If the extension is installed and enabled, but it cannot select a model, verify that your current API token has been added and the `Qiskit Code Assistant: Url` is properly set.
 
 ## Contribute to the VSCode extension
 
-The code for this official extension is publicly available and open source. Check it out in [github.](https://github.com/Qiskit/qiskit-code-assistant-vscode)
+The code for this official extension is publicly available and open source. Check it out in [GitHub.](https://github.com/Qiskit/qiskit-code-assistant-vscode)
