--- a/docs/guides/qiskit-code-assistant-vscode.mdx
+++ b/docs/guides/qiskit-code-assistant-vscode.mdx
@@ -31,7 +31,7 @@ Install directly from VSCode:
 
 Alternatively, the extension is also available through the [VSCode Marketplace](https://marketplace.visualstudio.com/items?itemName=qiskit.qiskit-vscode).
 
-When it's ready, you will see "Qiskit Code Assistant" listed on the bottom of the VS Code window, as shown.  If it is not listed, reload the extension or application.
+The extension loads automatically and is listed on the bottom of the VS Code window, as shown.  If it is not listed, reload the extension or application.
 
 ![Qiskit Code Assistant is shown on the bottom of the VS Code window.](/images/guides/qiskit-code-assistant/vscode-selected-model.png)
 
@@ -62,6 +62,8 @@ The first time you use the `granite-8b-qiskit` model, a modal opens listing some
 
 ### Generate code
 
+While you develop your code using Qiskit, you can ask to the Qiskit Code Assistant to help you. In general, the assistant suggests better code as response to Python comments or docstrings, but you can use the assistant anywhere in your file.
+
 To get a code suggestion, type a prompt, then `Ctrl`+`.`.  There are two types of prompts you can use:
 
   - Enter partial code and get a suggestion to finish the code.  Example:
@@ -82,14 +84,15 @@ To get a code suggestion, type a prompt, then `Ctrl`+`.`.  There are two types o
 
 ![A code suggestion is shown.  The suggested code is in grey.](/images/guides/qiskit-code-assistant/vscode-inline-suggestion.png)
 
-Press `Tab` to accept the suggestion or press `ESC` to reject it.
+### Work with code suggestions
 
-<Admonition type="tip" title="Tips for working with code suggestions">
-- Type `Ctrl` + `.` again to generate additional suggestions.
-- When a suggestion is shown, you can use `Option/Alt` + `]` and `Option/Alt` + `[` to cycle forward and backward, respectively, through the suggestions (if available).
+Use the following to accept, reject, and cycle through suggestions:
+
+- Press `Tab` to accept the suggestion or press `ESC` to reject it.
+- After getting a suggestion, type `Ctrl` + `.` again to generate additional suggestions.
+- When a suggestion is shown, use `Option/Alt` + `]` and `Option/Alt` + `[` to cycle forward and backward, respectively, through the suggestions (if available).
 - Hover the cursor over the suggestion to use the pop-up toolbar to cycle through the suggestions, as shown:
   ![The toolbar that pops up if you hover over suggested code is shown.](/images/guides/qiskit-code-assistant/vscode-inline-suggestion-toolbar.png)
-</Admonition>
 
 ## Uninstall the VSCode extension
 
@@ -97,8 +100,8 @@ To remove the Qiskit Code Assistant from VSCode, follow these steps:
 
 1. Launch Visual Studio Code.
 1. Click the Extensions icon.
-1. Search for `qiskit-vscode`.
-1. Click **Uninstall** for the "Qiskit Code Assistant".
+1. Search for `qiskit` and open the Qiskit Code Assistant.
+1. Click **Uninstall**.
 
 
 ## Troubleshooting
@@ -110,3 +113,9 @@ If the extension is installed and enabled, but it cannot select a model, verify 
 ## Contribute to the VSCode extension
 
 The code for this official extension is publicly available and open source. Check it out in [GitHub.](https://github.com/Qiskit/qiskit-code-assistant-vscode)
+
+## Next steps
+
+<Admonition type="tip" title="Recommendations">
+Check out examples to use the Qiskit Code Assistant for [circuits](https://docs.quantum.ibm.com/guides/circuit-library), [configuring error suppression](https://docs.quantum.ibm.com/guides/configure-error-suppression), and [transpiling with passmanagers.](transpile-with-pass-managers)
+</Admonition>
