--- a/docs/faq.mdx
+++ b/docs/faq.mdx
@@ -4,18 +4,15 @@ description: Frequently asked questions about IBM Quantum (Platform, or on IBM C
 
 ---
 
-<details>
-  <summary>
-    How do I cite Qiskit in my research?
-  </summary>
+# Frequently asked questions (FAQ)
+
+For FAQs specific to the execution modes, see the [Qiskit Runtime execution modes FAQ](/guides/execution-modes-faq) guide.
+
+## How do I cite Qiskit in my research?
 
 Cite Qiskit by using the included [BibTeX file](https://github.com/Qiskit/qiskit/blob/main/CITATION.bib).
-</details>
 
-<details>
-  <summary>
-    How do I cite an IBM Quantum computer in my research?
-  </summary>
+## How do I cite an IBM Quantum computer in my research?
 
 For research papers, we encourage authors to acknowledge IBM Quantum using:
 
@@ -34,22 +31,14 @@ For example:
 An example of citing an IBM Quantum program:
 
 > IBM Quantum (2022). Estimator primitive (Version x.y.z) [computer software]. https://<span>quantum.ibm.com</span>/
-</details>
 
-<details>
-  <summary>
-    How do I cite IBM Quantum Composer in my research?
-  </summary>
+## How do I cite IBM Quantum Composer in my research?
 
 An example of citing IBM Quantum Composer:
 
 > IBM Quantum Composer. 2023. url: https://<span>quantum.ibm.com/composer</span>
-</details>
 
-<details>
-  <summary>
-    Why do I receive the error message `AttributeError: QuantumCircuit object has no attribute 'save_state'` when using `save_*`method on a circuit?
-  </summary>
+## Why do I receive the error message `AttributeError: QuantumCircuit object has no attribute 'save_state'` when using `save_*`method on a circuit?
   
 The `save_*` instructions are part of Qiskit Aer project,
 a high performance simulator for quantum circuits. These instructions do not
@@ -58,21 +47,11 @@ exist outside of Qiskit Aer and are added dynamically to the
 use these instructions you must first ensure that you have imported
 `qiskit_aer` in your program before trying to call these methods. You
 can refer to [qiskit_aer.library](https://qiskit.org/ecosystem/aer/apidocs/aer_library.html) for the details of these custom
-instructions included with Qiskit Aer.
-</details>
 
-<details>
-  <summary>
-    Why do my results from real devices differ from my results from the simulator?
-  </summary>
+## Why do my results from real devices differ from my results from the simulator?
 
 The simulator models an ideal environment, without noise or decoherence. When jobs are run on the real devices, noise from the environment and decoherence cause the qubits to behave differently than in an ideal environment.
-</details>
 
-<details>
-  <summary>
-    How do I delete my account and data?
-  </summary>
+## How do I delete my account and data?
 
 To delete your account, go to your [account page](https://quantum.ibm.com/account#delete-account). Scroll to the Delete Account section, and click *Delete your account and account data*. You will receive an email with a link to delete your account.
-</details>
