Added note on fetching error from job.result()

--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -280,6 +280,24 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Fetching error messages\n",
+    "\n",
+    "If a program status is `ERROR`, use `job.result()` to fetch the error message to help debug as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(job.result())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "7c8c3e5d-1de2-4fed-be03-d134dc3fd907",
    "metadata": {},
    "source": [
