--- a/docs/guides/ibm-circuit-function.ipynb
+++ b/docs/guides/ibm-circuit-function.ipynb
@@ -252,6 +252,26 @@
   },
   {
    "cell_type": "markdown",
+   "id": "02295f5d",
+   "metadata": {},
+   "source": [
+    "## Fetching error messages\n",
+    "\n",
+    "If your workload status is `ERROR`, use `job.result()` to fetch the error message to help debug as follows:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4070e592",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(job.result())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "32db1269",
    "metadata": {},
    "source": [
