--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -282,7 +282,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Fetching error messages\n",
+    "### Fetch error messages\n",
     "\n",
     "If a program status is `ERROR`, use `job.result()` to fetch the error message to help debug as follows:"
    ]
