--- a/docs/guides/qiskit-code-assistant-jupyterlab.mdx
+++ b/docs/guides/qiskit-code-assistant-jupyterlab.mdx
@@ -69,7 +69,7 @@ The first time you use the `granite-8b-qiskit` model a modal opens, listing some
 
 ![The window that opens upon first use contains restrictions tha must be accepted.](/images/guides/qiskit-code-assistant/eula.png)
 
-### Generate Code
+### Generate code
 
 While you develop your code using Qiskit, you can ask to the Qiskit Code Assistant to help you. In general, the assistant suggests better code as response to Python comments or docstrings, but you can use the assistant anywhere in your file.
 
@@ -89,7 +89,7 @@ To get a code suggestion, type a prompt, then type `Alt` + `.` or `Alt` + `\`.  
 
     qc.mea # Type Ctrl + . for a code suggestion.
     ```
-  - Type a pound (#) sign, then type your prompt.  Example: # Give me a random circuit of 5 qubits and a depth of 4.
+  - Type a pound (#) sign, then type your prompt.  Example: `# Give me a random circuit of 5 qubits and a depth of 4.`
 
 ### Work with code suggestions
 
