--- a/docs/guides/q-ctrl-performance-management.ipynb
+++ b/docs/guides/q-ctrl-performance-management.ipynb
@@ -167,7 +167,7 @@
     "catalog = QiskitFunctionsCatalog(token=token)\n",
     "\n",
     "# Access Function\n",
-    "perf_mgmt = catalog.get(\"q-ctrl/performance-management\")"
+    "perf_mgmt = catalog.load(\"q-ctrl/performance-management\")"
    ]
   },
   {
