--- a/docs/guides/qiskit-code-assistant-jupyterlab.mdx
+++ b/docs/guides/qiskit-code-assistant-jupyterlab.mdx
@@ -95,8 +95,8 @@ To get a code suggestion, type a prompt, then type `Alt` + `.` or `Alt` + `\`.  
 
 Use the following to accept, reject, and cycle through suggestions:
 
-- `Alt` + `[` and `Alt` + `]` can be used to cycle through the list of suggestions if there are
-  more than one.
+- `Alt` + `[` and `Alt` + `]` can be used to cycle through the list of suggestions (if there are
+  more than one).
 - `Alt` + `Tab` or `Alt` + `END` accepts the suggested code and inserts it at the current
   cursor location.
 
@@ -133,7 +133,7 @@ jupyter server extension list
 ```
 
 If the server extension is installed and enabled, but you don't see the frontend
-extension, check the frontend extension is installed:
+extension, check that the frontend extension is installed:
 
 ```bash
 jupyter labextension list
@@ -147,5 +147,5 @@ The code for this extension is publicly available and open source. Check it out 
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
-Check out examples to use the Qiskit Code Assistant for [circuits](https://docs.quantum.ibm.com/guides/circuit-library), [configuring error suppression](https://docs.quantum.ibm.com/guides/configure-error-suppression), and [transpiling with passmanagers.](transpile-with-pass-managers)
+See examples to use the Qiskit Code Assistant for [circuits]/guides/circuit-library), [configuring error suppression](/guides/configure-error-suppression), and [transpiling with pass managers.](/guides/transpile-with-pass-managers)
 </Admonition>
