--- a/docs/guides/qiskit-code-assistant-vscode.mdx
+++ b/docs/guides/qiskit-code-assistant-vscode.mdx
@@ -20,16 +20,16 @@ Learn how to install, use, configure and uninstall the official Qiskit Code Assi
 
 ## Install the VSCode extension
 
-To install the [VSCode extension](https://github.com/Qiskit/qiskit-code-assistant-vscode), follow these steps:
+To install the [VS Code extension](https://github.com/Qiskit/qiskit-code-assistant-vscode), follow these steps:
 
-Install directly from VSCode:
+Install directly from VS Code:
 
 1. Launch VS Code.
 1. Click the Extensions icon in the left toolbar.
 1. Search for `qiskit`
 1. Find "Qiskit Code Assistant (Beta)" and click **Install**.
 
-Alternatively, the extension is also available through the [VSCode Marketplace](https://marketplace.visualstudio.com/items?itemName=qiskit.qiskit-vscode).
+Alternatively, the extension is also available through the [VS Code Marketplace](https://marketplace.visualstudio.com/items?itemName=qiskit.qiskit-vscode).
 
 The extension loads automatically and is listed on the bottom of the VS Code window, as shown.  If it is not listed, reload the extension or application.
 
@@ -45,7 +45,7 @@ The following settings can be configured:
 
 - [Advanced] To change the instance of the Qiskit Code Assistant Service that the extension should use, go to File -> Preferences -> Settings.  On the User tab,  search for Qiskit, and edit the `Qiskit Code Assistant: Url`.
 
-## Get started using the Qiskit Code Assistant extension for VSCode
+## Get started using the Qiskit Code Assistant extension for VS Code
 
 
 ### Authentication and setup
@@ -58,11 +58,11 @@ By default, the extension uses the `granite-8b-qiskit` model, which is listed in
 
 The first time you use the `granite-8b-qiskit` model, a modal opens listing some major restrictions that you should be aware of when using the model. Clicking `Accept` will accept the disclaimer and enable the model for code generation.
 
-![The window that opens upon first use contains restrictions tha must be accepted.](/images/guides/qiskit-code-assistant/eula.png)
+![The window that opens upon first use contains restrictions that must be accepted.](/images/guides/qiskit-code-assistant/eula.png)
 
 ### Generate code
 
-While you develop your code using Qiskit, you can ask to the Qiskit Code Assistant to help you. In general, the assistant suggests better code as response to Python comments or docstrings, but you can use the assistant anywhere in your file.
+While you develop your code using Qiskit, you can ask the Qiskit Code Assistant to help you. In general, the Assistant suggests better code in response to Python comments or docstrings, but you can use the Assistant anywhere in your file.
 
 To get a code suggestion, type a prompt, then `Ctrl`+`.`.  There are two types of prompts you can use:
 
@@ -82,7 +82,7 @@ To get a code suggestion, type a prompt, then `Ctrl`+`.`.  There are two types o
     ```
   - Type a pound (#) sign, then type your prompt.  Example: `# Give me a random circuit of 5 qubits and a depth of 4.`
 
-![A code suggestion is shown.  The suggested code is in grey.](/images/guides/qiskit-code-assistant/vscode-inline-suggestion.png)
+![A code suggestion is shown, and is greyed out.](/images/guides/qiskit-code-assistant/vscode-inline-suggestion.png)
 
 ### Work with code suggestions
 
@@ -94,9 +94,9 @@ Use the following to accept, reject, and cycle through suggestions:
 - Hover the cursor over the suggestion to use the pop-up toolbar to cycle through the suggestions, as shown:
   ![The toolbar that pops up if you hover over suggested code is shown.](/images/guides/qiskit-code-assistant/vscode-inline-suggestion-toolbar.png)
 
-## Uninstall the VSCode extension
+## Uninstall the VS Code extension
 
-To remove the Qiskit Code Assistant from VSCode, follow these steps:
+To remove the Qiskit Code Assistant from VS Code, follow these steps:
 
 1. Launch Visual Studio Code.
 1. Click the Extensions icon.
@@ -106,7 +106,7 @@ To remove the Qiskit Code Assistant from VSCode, follow these steps:
 
 ## Troubleshooting
 
-If you don't see the extension status bar in VSCode, check that the extension is installed and enabled under the extensions tab.
+If you don't see the extension status bar in VS Code, check that the extension is installed and enabled under the extensions tab.
 
 If the extension is installed and enabled, but it cannot select a model, verify that your current API token has been added and the `Qiskit Code Assistant: Url` is properly set.
 
@@ -117,5 +117,5 @@ The code for this official extension is publicly available and open source. Chec
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
-Check out examples to use the Qiskit Code Assistant for [circuits](https://docs.quantum.ibm.com/guides/circuit-library), [configuring error suppression](https://docs.quantum.ibm.com/guides/configure-error-suppression), and [transpiling with passmanagers.](transpile-with-pass-managers)
+See examples to use the Qiskit Code Assistant for [circuits](/guides/circuit-library), [configuring error suppression](/guides/configure-error-suppression), and [transpiling with pass managers.](/guides/transpile-with-pass-managers)
 </Admonition>
