--- a/docs/guides/qiskit-code-assistant.mdx
+++ b/docs/guides/qiskit-code-assistant.mdx
@@ -72,6 +72,6 @@ Eprint = {arXiv:2406.14712},
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
-  - Install and use the official [JupyterLab](/guides/qiskit-code-assistant-jupyterlab) or [VSCode](/guides/qiskit-code-assistant-vscode) extensions.
-  - Check out examples to use the Qiskit Code Assistant for [circuits](https://docs.quantum.ibm.com/guides/circuit-library), [configuring error suppression](https://docs.quantum.ibm.com/guides/configure-error-suppression), and [transpiling with passmanagers.](transpile-with-pass-managers)
+  - Install and use the official [JupyterLab](/guides/qiskit-code-assistant-jupyterlab) or [VS Code](/guides/qiskit-code-assistant-vscode) extensions.
+  - See examples to use the Qiskit Code Assistant for [circuits](/guides/circuit-library), [configuring error suppression](/guides/configure-error-suppression), and [transpiling with pass managers.](/guides/transpile-with-pass-managers)
 </Admonition>
