--- a/docs/api/qiskit/release-notes/0.46.mdx
+++ b/docs/api/qiskit/release-notes/0.46.mdx
@@ -234,9 +234,7 @@ If you develop a library based on Qiskit and you still have a dependency on `qis
     *   `qiskit.transpiler.synthesis.graysynth()` has been moved to [`qiskit.synthesis.synth_cnot_phase_aam()`](/api/qiskit/0.46/synthesis#qiskit.synthesis.synth_cnot_phase_aam "qiskit.synthesis.synth_cnot_phase_aam").
     *   `qiskit.transpiler.synthesis.cnot_synth()` has been moved to [`qiskit.synthesis.synth_cnot_count_full_pmh()`](/api/qiskit/0.46/synthesis#qiskit.synthesis.synth_cnot_count_full_pmh "qiskit.synthesis.synth_cnot_count_full_pmh").
 
-*   The `qiskit.tools.jupyter` module has been deprecated and will be removed in Qiskit 1.0.0. This module is deprecated because the functionality in this module is tied to the legacy `qiskit-ibmq-provider` package which is no longer supported and also only supported [`BackendV1`](/api/qiskit/0.46/qiskit.providers.BackendV1 "qiskit.providers.BackendV1"). If you’re using this functionality currently, similar jupyter tools exist in the [qiskit-ibm-provider](https://github.com/Qiskit/qiskit-ibm-provider) package which can be used instead. The documentation for this module can be found here:
-
-    [api/qiskit-ibm-provider/ibm\_jupyter](/api/qiskit-ibm-provider/ibm_jupyter)
+*   The `qiskit.tools.jupyter` module has been deprecated and will be removed in Qiskit 1.0.0. This module is deprecated because the functionality in this module is tied to the legacy `qiskit-ibmq-provider` package which is no longer supported and also only supported [`BackendV1`](/api/qiskit/0.46/qiskit.providers.BackendV1 "qiskit.providers.BackendV1"). If you’re using this functionality currently, similar jupyter tools exist in the [qiskit-ibm-provider](https://github.com/Qiskit/qiskit-ibm-provider) package which can be used instead.
 
 *   The `qiskit.tools.monitor` module has been deprecated and will be removed in Qiskit 1.0.0. This module is deprecated because the functionality in this module is tied to the legacy `qiskit-ibmq-provider` package which is no longer supported and also only supported [`BackendV1`](/api/qiskit/0.46/qiskit.providers.BackendV1 "qiskit.providers.BackendV1").
 
