--- a/docs/guides/qiskit-code-assistant-vscode.mdx
+++ b/docs/guides/qiskit-code-assistant-vscode.mdx
@@ -20,16 +20,18 @@ Learn how to install, use, configure and uninstall the official Qiskit Code Assi
 
 ## Install the VSCode extension
 
-To install the [VSCode extension](https://github.com/Qiskit/qiskit-code-assistant-vscode), follow these steps:
+To install the [VS Code extension](https://github.com/Qiskit/qiskit-code-assistant-vscode), follow these steps:
+
+Install directly from VS Code:
 
 1. Launch VS Code.
 1. Click the Extensions icon in the left toolbar.
-1. Search for `qiskit-vscode`
-1. Find "Qiskit Code Assistant" and click **Install**.
+1. Search for `qiskit`
+1. Find "Qiskit Code Assistant (Beta)" and click **Install**.
 
-The extension is also available through the [VSCode Marketplace](https://marketplace.visualstudio.com/items?itemName=qiskit.qiskit-vscode).
+Alternatively, the extension is also available through the [VS Code Marketplace](https://marketplace.visualstudio.com/items?itemName=qiskit.qiskit-vscode).
 
-After installing, reload the extension/IDE (typically, VSCode will prompt you to do this automatically). When it's ready, you will see "Qiskit Code Assistant" listed on the bottom of the VS Code window:
+The extension loads automatically and is listed on the bottom of the VS Code window, as shown.  If it is not listed, reload the extension or application.
 
 ![Qiskit Code Assistant is shown on the bottom of the VS Code window.](/images/guides/qiskit-code-assistant/vscode-selected-model.png)
 
@@ -37,13 +39,13 @@ After installing, reload the extension/IDE (typically, VSCode will prompt you to
 
 The following settings can be configured:
 
-- To change keyboard shortcuts, open the Keyboard Shortcuts settings (`Cmd/Ctrl+Shift+P` -> `Preferences: Open Keyboard Shortcuts`) and search for `qiskit-vscode`.
+- To change keyboard shortcuts, open the Keyboard Shortcuts settings (`Cmd/Ctrl`+`Shift`+`P` -> `Preferences: Open Keyboard Shortcuts (JSON)`) and search for `qiskit-vscode`.
 
-- You can change the IBM Quantum API token to use in the VSCode command palette. To do that, type `Cmd/Ctrl+Shift+P`, search for `qiskit`, select the **Qiskit Code Assistant: Set IBM Quantum API token** command, and paste your IBM Quantum API token.
+- You can change the IBM Quantum API token to use in the VSCode command palette. To do that, type `Cmd/Ctrl`+`Shift`+`P`, search for `qiskit`, select the **Qiskit Code Assistant: Set IBM Quantum API token** command, and paste your IBM Quantum API token.
 
-- [Advanced] To change the instance of the Qiskit Code Assistant Service that the extension should use, go to File > Preferences > Settings > User Settings and edit the `Qiskit Code Assistant: Url`.
+- [Advanced] To change the instance of the Qiskit Code Assistant Service that the extension should use, go to File -> Preferences -> Settings.  On the User tab,  search for Qiskit, and edit the `Qiskit Code Assistant: Url`.
 
-## Get started using the Qiskit Code Assistant extension for VSCode
+## Get started using the Qiskit Code Assistant extension for VS Code
 
 
 ### Authentication and setup
@@ -56,38 +58,64 @@ By default, the extension uses the `granite-8b-qiskit` model, which is listed in
 
 The first time you use the `granite-8b-qiskit` model, a modal opens listing some major restrictions that you should be aware of when using the model. Clicking `Accept` will accept the disclaimer and enable the model for code generation.
 
-![The window that opens upon first use contains restrictions tha must be accepted.](/images/guides/qiskit-code-assistant/eula.png)
+![The window that opens upon first use contains restrictions that must be accepted.](/images/guides/qiskit-code-assistant/eula.png)
 
-### Generate Code
-After accepting the EULA, you can open a new file and start coding. To get a code suggestion, type `Ctrl` + `.` as shown:
+### Generate code
 
-![A code suggestion is shown.  The suggested code is in grey.](/images/guides/qiskit-code-assistant/vscode-inline-suggestion.png)
+While you develop your code using Qiskit, you can ask the Qiskit Code Assistant to help you. In general, the Assistant suggests better code in response to Python comments or docstrings, but you can use the Assistant anywhere in your file.
 
-Press the `Tab` key to accept the model-generated suggestion or press the `ESC` key to reject it.
+To get a code suggestion, type a prompt, then `Ctrl`+`.`.  There are two types of prompts you can use:
 
-<Admonition type="tip" title="Tips for working with code suggestions">
-- Type `Ctrl` + `.` again to generate additional suggestions.
-- When a suggestion is shown, you can use `Alt/Option` + `]` and `Alt/Option + `[` to cycle forward and backward, respectively, through the suggestions (if available).
-- You can hover the cursor over the suggestion to use the pop-up toolbar to cycle through the suggestions, as shown:
+  - Enter partial code and get a suggestion to finish the code.  Example:
+    ```python
+    from qiskit.circuit import QuantumCircuit
+    from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
+    from qiskit_ibm_runtime import SamplerV2 as Sampler
+    from qiskit_ibm_runtime.fake_provider import FakeManilaV2
+
+    # Bell Circuit
+    qc = QuantumCircuit(2)
+    qc.h(0)
+    qc.cx(0, 1)
+
+    qc.mea # Type Ctrl + . for a code suggestion.
+    ```
+  - Type a pound (#) sign, then type your prompt.  Example: `# Give me a random circuit of 5 qubits and a depth of 4.`
+
+![A code suggestion is shown, and is greyed out.](/images/guides/qiskit-code-assistant/vscode-inline-suggestion.png)
+
+### Work with code suggestions
+
+Use the following to accept, reject, and cycle through suggestions:
+
+- Press `Tab` to accept the suggestion or press `ESC` to reject it.
+- After getting a suggestion, type `Ctrl` + `.` again to generate additional suggestions.
+- When a suggestion is shown, use `Option/Alt` + `]` and `Option/Alt` + `[` to cycle forward and backward, respectively, through the suggestions (if available).
+- Hover the cursor over the suggestion to use the pop-up toolbar to cycle through the suggestions, as shown:
   ![The toolbar that pops up if you hover over suggested code is shown.](/images/guides/qiskit-code-assistant/vscode-inline-suggestion-toolbar.png)
-</Admonition>
 
-## Uninstall the VSCode extension
+## Uninstall the VS Code extension
 
-To remove the Qiskit Code Assistant from VSCode, follow these steps:
+To remove the Qiskit Code Assistant from VS Code, follow these steps:
 
 1. Launch Visual Studio Code.
 1. Click the Extensions icon.
-1. Search for `qiskit-vscode`.
-1. Click **Uninstall** for the "Qiskit Code Assistant".
+1. Search for `qiskit` and open the Qiskit Code Assistant.
+1. Click **Uninstall**.
 
 
 ## Troubleshooting
 
-If you are not seeing the extension status bar in VSCode, check that the extension is installed and enabled under the extensions tab.
+If you don't see the extension status bar in VS Code, check that the extension is installed and enabled under the extensions tab.
 
-If the extension is installed and enabled, but cannot select a model, verify that your current API Token has been added and the `Qiskit Code Assistant: Url` is properly set.
+If the extension is installed and enabled, but it cannot select a model, verify that your current API token has been added and the `Qiskit Code Assistant: Url` is properly set.
 
 ## Contribute to the VSCode extension
 
-The code for this official extension is publicly available and open source. Check it out in [github.](https://github.com/Qiskit/qiskit-code-assistant-vscode)
+The code for this official extension is publicly available and open source. Check it out in [GitHub.](https://github.com/Qiskit/qiskit-code-assistant-vscode)
+
+## Next steps
+
+<Admonition type="tip" title="Recommendations">
+See examples to use the Qiskit Code Assistant for [circuits](/guides/circuit-library), [configuring error suppression](/guides/configure-error-suppression), and [transpiling with pass managers.](/guides/transpile-with-pass-managers)
+</Admonition>
