--- a/docs/guides/serverless-run-first-workload.ipynb
+++ b/docs/guides/serverless-run-first-workload.ipynb
@@ -136,7 +136,7 @@
    "id": "f522b54f-93e5-45e9-9dc7-a2287eb4c707",
    "metadata": {},
    "source": [
-    "Select your program with `serverless.get('PROGRAM_NAME')`:"
+    "Select your program with `serverless.load('PROGRAM_NAME')`:"
    ]
   },
   {
@@ -146,7 +146,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "transpile_remote_serverless = serverless.get('transpile_remote_serverless')"
+    "transpile_remote_serverless = serverless.load('transpile_remote_serverless')"
    ]
   },
   {
@@ -330,7 +330,7 @@
    "source": [
     "## List previously run jobs run with Qiskit Serverless\n",
     "\n",
-    "You can use `get_jobs()` to list all jobs submitted to Qiskit Serverless:"
+    "You can use `jobs()` to list all jobs submitted to Qiskit Serverless:"
    ]
   },
   {
@@ -354,7 +354,7 @@
     }
    ],
    "source": [
-    "old_jobs = serverless.get_jobs()\n",
+    "old_jobs = serverless.jobs()\n",
     "old_jobs"
    ]
   },
