Incorporate review comments

--- a/docs/guides/serverless-manage-resources.ipynb
+++ b/docs/guides/serverless-manage-resources.ipynb
@@ -17,7 +17,7 @@
    "id": "b2d40a63-3359-46e9-8f1b-4746b449b407",
    "metadata": {},
    "source": [
-    "For classical tasks that can be parallelized, use the `@distribute_task` decorater to define compute requirements needed to perform a task. Start by recalling the `transpile_parallel.py` example from the [Write your first Qiskit Serverless program](./serverless-first-program) topic:"
+    "For classical tasks that can be parallelized, use the `@distribute_task` decorater to define compute requirements needed to perform a task. Start by recalling the `transpile_remote.py` example from the [Write your first Qiskit Serverless program](./serverless-first-program) topic:"
    ]
   },
   {
@@ -79,7 +79,7 @@
    "id": "a5914f1d-f898-4db4-8d1e-ccc8081883b9",
    "metadata": {},
    "source": [
-    "In this example, you decorated the `transpile_remote()` method with `@distribute_task(target={\"cpu\": 1})`. When run, this creates an asynchronous parallel worker task with a single CPU core, and returns with a reference to track the worker. To fetch the result, pass the reference to the `get()` method:"
+    "In this example, you decorated the `transpile_remote()` function with `@distribute_task(target={\"cpu\": 1})`. When run, this creates an asynchronous parallel worker task with a single CPU core, and returns with a reference to track the worker. To fetch the result, pass the reference to the `get()` method:"
    ]
   },
   {
@@ -238,30 +238,35 @@
     "import time\n",
     "import uuid\n",
     "\n",
-    "TITLE = \"transpile_remote_serverless_test_\" + uuid.uuid4().hex[:8]\n",
-    "serverless = IBMServerlessClient()\n",
-    "transpile_remote_demo = QiskitFunction(\n",
-    "    title=TITLE,\n",
-    "    entrypoint=\"transpile_remote.py\",\n",
-    "    working_dir=\"./source_files/\",\n",
-    "\tdependencies=[\"qiskit-aer==0.14.1\"],\n",
-    ")\n",
-    "serverless.upload(transpile_remote_demo)\n",
-    "job = serverless.get(TITLE).run(\n",
-    "    circuit=random_circuit(3,3),\n",
-    "    circuit_list=[random_circuit(3,3) for _ in range(3)],\n",
-    "    backend=\"ibm_kyiv\",\n",
-    "    optimization_level=1,\n",
-    ")\n",
-    "for retry in range(20):\n",
-    "    status = job.status()\n",
-    "    if status == \"DONE\":\n",
-    "        break\n",
-    "    if status == \"ERROR\":\n",
-    "        raise Exception(\"Something went wrong. See following serverless logs:\\n\\n\" + job.logs())\n",
-    "    clear_output()\n",
-    "    print(f\"Job still running, waiting 5s then retrying ({retry})\")\n",
-    "    time.sleep(5)"
+    "def test_serverless_job(title, entrypoint):\n",
+    "    title += \"_\" + uuid.uuid4().hex[:8]\n",
+    "    serverless = IBMServerlessClient()\n",
+    "    transpile_remote_demo = QiskitFunction(\n",
+    "        title=TITLE,\n",
+    "        entrypoint=entrypoint,\n",
+    "        working_dir=\"./source_files/\",\n",
+    "    )\n",
+    "    serverless.upload(transpile_remote_demo)\n",
+    "    job = serverless.get(TITLE).run(\n",
+    "        circuit=random_circuit(3,3),\n",
+    "        circuit_list=[random_circuit(3,3) for _ in range(3)],\n",
+    "        backend=\"ibm_kyiv\",\n",
+    "        optimization_level=1,\n",
+    "    )\n",
+    "    for retry in range(25):\n",
+    "        status = job.status()\n",
+    "        if status == \"DONE\":\n",
+    "            break\n",
+    "        if status == \"ERROR\":\n",
+    "            raise Exception(\"Something went wrong. See following serverless logs:\\n\\n\" + job.logs())\n",
+    "        clear_output()\n",
+    "        print(f\"Job still running, waiting 5s then retrying ({retry})\")\n",
+    "        time.sleep(5)\n",
+    "\n",
+    "test_serverless_job(\n",
+    "    title=\"transpile_remote_serverless_test\",\n",
+    "    entrypoint=\"transpile_remote.py\"\n",
+    ")"
    ]
   },
   {
@@ -542,34 +547,10 @@
     "# This cell is hidden from users.\n",
     "# It uploads the serverless program and checks it runs.\n",
     "\n",
-    "from qiskit.circuit.random import random_circuit\n",
-    "from qiskit_serverless import IBMServerlessClient, QiskitFunction\n",
-    "import time\n",
-    "\n",
-    "TITLE = \"transpile_remote_serverless_test_\" + uuid.uuid4().hex[:8]\n",
-    "serverless = IBMServerlessClient()\n",
-    "transpile_remote_demo = QiskitFunction(\n",
-    "    title=TITLE,\n",
-    "    entrypoint=\"transpile_parallel.py\",\n",
-    "    working_dir=\"./source_files/\",\n",
-    "\tdependencies=[\"qiskit-aer==0.14.1\"],\n",
+    "test_serverless_job(\n",
+    "    title=\"transpile_remote_serverless_test\",\n",
+    "    entrypoint=\"transpile_parallel.py\"\n",
     ")\n",
-    "serverless.upload(transpile_remote_demo)\n",
-    "job = serverless.get(TITLE).run(\n",
-    "    circuit=random_circuit(3,3),\n",
-    "    circuit_list=[random_circuit(3,3) for _ in range(3)],\n",
-    "    backend=\"ibm_kyiv\",\n",
-    "    optimization_level=1,\n",
-    ")\n",
-    "for retry in range(20):\n",
-    "    status = job.status()\n",
-    "    if status == \"DONE\":\n",
-    "        break\n",
-    "    if status == \"ERROR\":\n",
-    "        raise Exception(\"Something went wrong. See following serverless logs:\\n\\n\" + job.logs())\n",
-    "    clear_output()\n",
-    "    print(f\"Job still running, waiting 5s then retrying ({retry})\")\n",
-    "    time.sleep(5)\n",
     "\n",
     "# Clean up\n",
     "Path(\"./source_files/transpile_parallel.py\").unlink()\n",
