--- a/docs/guides/install-qiskit.mdx
+++ b/docs/guides/install-qiskit.mdx
@@ -140,7 +140,7 @@ If you are planning to work locally and use simulators built into Qiskit, then y
 </Admonition>
 
 <CodeAssistantAdmonition>
-  Need help? Try asking the Qiskit Code Assistant.
+  Need help? Try asking Qiskit Code Assistant.
 
   * `# Print the version of Qiskit we're using`
   * `# Return True if the version of Qiskit is 1.0 or greater`
