--- a/docs/guides/qiskit-code-assistant-vscode.mdx
+++ b/docs/guides/qiskit-code-assistant-vscode.mdx
@@ -1,24 +1,24 @@
 ---
-title: Use the Qiskit Code Assistant in VSCode
-description: How to install, use, and configure the Qiskit Code Assistant in Visual Studio Code (VSCode).
+title: Use Qiskit Code Assistant in VS Code
+description: How to install, use, and configure Qiskit Code Assistant in Visual Studio Code (VS Code).
 ---
 
-# Use the Qiskit Code Assistant in Visual Studio Code
+# Use Qiskit Code Assistant in Visual Studio Code
 
-Learn how to install, use, configure and uninstall the official Qiskit Code Assistant extension in Visual Studio Code (VSCode).
+Learn how to install, use, configure and uninstall the official Qiskit Code Assistant extension in Visual Studio Code (VS Code).
 
 <Admonition type="note" title="Notes">
     - This is an experimental feature available only to IBM Quantum&trade; Premium Plan users.
-    - The Qiskit Code Assistant is in preview release status and is subject to change.
+    - Qiskit Code Assistant is in preview release status and is subject to change.
     - If you have feedback or want to contact the developer team, use the [Qiskit Slack Workspace channel](https://qiskit.enterprise.slack.com/archives/C07LYA6PL83) or the related public GitHub repositories.
 </Admonition>
 
 
-<video title="A user uses the Qiskit Code Assistant in Visual Studio Code. The user has previous imports and a function definition called get_random_linear_function, with a docstring defining what the function should do. After typing the Ctrl and . keys, the Qiskit Code Assistant autocompletes the function with the code to generate a random linear function using Numpy and Qiskit. The video ends with the user executing the code generated and getting a matrix representing a random linear function in the terminal." className="max-w-auto h-auto" controls>
+<video title="A user uses Qiskit Code Assistant in Visual Studio Code. The user has previous imports and a function definition called get_random_linear_function, with a docstring defining what the function should do. After typing the Ctrl and . keys, Qiskit Code Assistant autocompletes the function with the code to generate a random linear function using Numpy and Qiskit. The video ends with the user executing the code generated and getting a matrix representing a random linear function in the terminal." className="max-w-auto h-auto" controls>
   <source src="/videos/guides/qiskit-code-assistant/demo-Vscode-RandomLinearFunction_8b-qiskit.mp4" type="video/mp4"></source>
 </video>
 
-## Install the VSCode extension
+## Install the VS Code extension
 
 To install the [VS Code extension](https://github.com/Qiskit/qiskit-code-assistant-vscode), follow these steps:
 
@@ -41,7 +41,7 @@ The following settings can be configured:
 
 - To change keyboard shortcuts, open the Keyboard Shortcuts settings (`Cmd/Ctrl`+`Shift`+`P` -> `Preferences: Open Keyboard Shortcuts (JSON)`) and search for `qiskit-vscode`.
 
-- You can change the IBM Quantum API token to use in the VSCode command palette. To do that, type `Cmd/Ctrl`+`Shift`+`P`, search for `qiskit`, select the **Qiskit Code Assistant: Set IBM Quantum API token** command, and paste your IBM Quantum API token.
+- You can change the IBM Quantum API token to use in the VS Code command palette. To do that, type `Cmd/Ctrl`+`Shift`+`P`, search for `qiskit`, select the **Qiskit Code Assistant: Set IBM Quantum API token** command, and paste your IBM Quantum API token.
 
 - [Advanced] To change the instance of the Qiskit Code Assistant Service that the extension should use, go to File -> Preferences -> Settings.  On the User tab,  search for Qiskit, and edit the `Qiskit Code Assistant: Url`.
 
@@ -62,7 +62,7 @@ The first time you use the `granite-8b-qiskit` model, a modal opens listing some
 
 ### Generate code
 
-While you develop your code using Qiskit, you can ask the Qiskit Code Assistant to help you. In general, the Assistant suggests better code in response to Python comments or docstrings, but you can use the Assistant anywhere in your file.
+While you develop your code using Qiskit, you can ask Qiskit Code Assistant to help you. In general, the Assistant suggests better code in response to Python comments or docstrings, but you can use the Assistant anywhere in your file.
 
 To get a code suggestion, type a prompt, then `Ctrl`+`.`.  There are two types of prompts you can use:
 
@@ -96,11 +96,11 @@ Use the following to accept, reject, and cycle through suggestions:
 
 ## Uninstall the VS Code extension
 
-To remove the Qiskit Code Assistant from VS Code, follow these steps:
+To remove Qiskit Code Assistant from VS Code, follow these steps:
 
 1. Launch Visual Studio Code.
 1. Click the Extensions icon.
-1. Search for `qiskit` and open the Qiskit Code Assistant.
+1. Search for `qiskit` and open Qiskit Code Assistant.
 1. Click **Uninstall**.
 
 
@@ -110,12 +110,12 @@ If you don't see the extension status bar in VS Code, check that the extension i
 
 If the extension is installed and enabled, but it cannot select a model, verify that your current API token has been added and the `Qiskit Code Assistant: Url` is properly set.
 
-## Contribute to the VSCode extension
+## Contribute to the VS Code extension
 
 The code for this official extension is publicly available and open source. Check it out in [GitHub.](https://github.com/Qiskit/qiskit-code-assistant-vscode)
 
 ## Next steps
 
 <Admonition type="tip" title="Recommendations">
-See examples to use the Qiskit Code Assistant for [circuits](/guides/circuit-library), [configuring error suppression](/guides/configure-error-suppression), and [transpiling with pass managers.](/guides/transpile-with-pass-managers)
+See examples to use Qiskit Code Assistant for [circuits](/guides/circuit-library), [configuring error suppression](/guides/configure-error-suppression), and [transpiling with pass managers.](/guides/transpile-with-pass-managers)
 </Admonition>
