--- a/docs/guides/save-jobs.ipynb
+++ b/docs/guides/save-jobs.ipynb
@@ -112,7 +112,7 @@
    "metadata": {},
    "source": [
     "<CodeAssistantAdmonition>\n",
-    "  Always forgetting how to retrieve a job? Try this prompt with the Qiskit Code Assistant:\n",
+    "  Always forgetting how to retrieve a job? Try this prompt with Qiskit Code Assistant:\n",
     "\n",
     "  * `# Retrieve job JOB_ID from IBM Runtime and print the result`\n",
     "</CodeAssistantAdmonition>"
