minor code bug in Qiskit Function. stringify backend_name Fixes #1996

--- a/docs/guides/algorithmiq-tem.ipynb
+++ b/docs/guides/algorithmiq-tem.ipynb
@@ -165,8 +165,7 @@
     "\n",
     "# Define the execution options\n",
     "service = QiskitRuntimeService()\n",
-    "backend_name = service.least_busy(operational=True)\n",
-    "\n",
+    "backend_name = service.least_busy(operational=True).name\n",
     "instance = \"<IQP_HUB/IQP_GROUP/IQP_PROJECT>\"\n",
     "\n",
     "pub = (qc, observable)\n",
