Checkpoint: Remove automatic QPU selection
plus edits / tweaks

--- a/docs/guides/serverless-manage-resources.ipynb
+++ b/docs/guides/serverless-manage-resources.ipynb
@@ -36,8 +36,10 @@
    "outputs": [],
    "source": [
     "# This cell is hidden from users\n",
+    "import os\n",
     "from pathlib import Path\n",
-    "Path(\"./source_files\").mkdir(exist_ok=True, parents=True)"
+    "Path(\"./serverless-manage-resources-workspace/source_files\").mkdir(exist_ok=True, parents=True)\n",
+    "os.chdir(\"./serverless-manage-resources\")"
    ]
   },
   {
@@ -79,7 +81,7 @@
    "id": "a5914f1d-f898-4db4-8d1e-ccc8081883b9",
    "metadata": {},
    "source": [
-    "In this example, you decorated the `transpile_remote()` function with `@distribute_task(target={\"cpu\": 1})`. When run, this creates an asynchronous parallel worker task with a single CPU core, and returns with a reference to track the worker. To fetch the result, pass the reference to the `get()` method:"
+    "In this example, you decorated the `transpile_remote()` function with `@distribute_task(target={\"cpu\": 1})`. When run, this creates an asynchronous parallel worker task with a single CPU core, and returns with a reference to track the worker. To fetch the result, pass the reference to the `get()` function:"
    ]
   },
   {
@@ -299,117 +301,14 @@
     }
    ],
    "source": [
-    "%%writefile ./source_files/transpile_remote.py\n",
+    "%%writefile --append ./source_files/transpile_remote.py\n",
     "\n",
     "@distribute_task(target={\n",
     "    \"cpu\": 16,\n",
-    "    \"mem\": 32 * 1024 * 1024 * 1024\n",
+    "    \"mem\": 2 * 1024 * 1024 * 1024\n",
     "})\n",
     "def transpile_remote(circuit, optimization_level, backend):\n",
     "    return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "7aa5bcb1-ac02-49c7-bc2a-1b98bcb9db36",
-   "metadata": {
-    "editable": true,
-    "slideshow": {
-     "slide_type": ""
-    },
-    "tags": [
-     "remove-cell"
-    ]
-   },
-   "outputs": [],
-   "source": [
-    "# This cell is hidden from users\n",
-    "# Clean up file afterwards\n",
-    "Path(\"./source_files/transpile_remote.py\").unlink()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f6fff174-301f-47ca-b7c6-69bb5298fd14",
-   "metadata": {},
-   "source": [
-    "## Automatic QPU selection\n",
-    "\n",
-    "This example demonstrates how to use `IBMQPUSelector` to automate the process of selecting which qubits to use from a set of available QPUs. Instead of manually selecting a QPU, Qiskit Serverless automatically allocates a QPU according to desired criteria. `IBMQPUSelector`s are imported from server-side `qiskit_serverless_tools.selectors` modules, and must be invoked from your uploaded program.\n",
-    "\n",
-    "Here, `IBMLeastNoisyQPUSelector` finds the QPU that yields the least-noisy qubit subgraph for the input circuit, from among the QPUs available to you through your IBM Quantum account.\n",
-    "\n",
-    "For each `IBMQPUSelector`, the context is set in the constructor. All `IBMQPUSelectors` require Qiskit Runtime credentials. The `IBMLeastNoisyQPUSelector` requires a circuit and transpile options specifying how the circuit should be optimized for each QPU, to determine the most optimal QPU and qubit layout.\n",
-    "\n",
-    "All `IBMQPUSelectors` implement a `get_backend` method, which retrieves the optimal QPU with respect to the given context. The `get_backend` method also allows for additional filtering of the QPUs. It is implemented using the same interface as the [QiskitRuntimeService.backends](/api/qiskit-ibm-runtime/qiskit_ibm_runtime.QiskitRuntimeService#backends) method."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "b9b38d02-1c4b-4598-abc8-f2ff2f3c1d23",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Writing ./source_files/transpile_parallel.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%writefile ./source_files/transpile_parallel.py\n",
-    "\n",
-    "from qiskit_ibm_runtime import QiskitRuntimeService\n",
-    "from qiskit.circuit.random import random_circuit\n",
-    "from qiskit_serverless_tools.selectors import IBMLeastNoisyQPUSelector\n",
-    "\n",
-    "service = QiskitRuntimeService()\n",
-    "\n",
-    "abstract_circuit = random_circuit(\n",
-    "    num_qubits=100, depth=4, measure=True\n",
-    ")\n",
-    "\n",
-    "selector = IBMLeastNoisyQPUSelector(\n",
-    "    service, circuit=abstract_circuit, transpile_options={\"optimization_level\": 3}\n",
-    ")\n",
-    "backend = selector.get_backend(min_num_qubits=127)\n",
-    "target_circuit = selector.optimized_circuit"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8eda9b3e-31c3-4783-b5f6-a72bd31e41b6",
-   "metadata": {},
-   "source": [
-    "You can also use the `IBMLeastBusyQPUSelector` to find a QPU that can support the circuit width but with the shortest queue."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "10bdb211-0d53-4269-aa92-51ecf494bd63",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Appending to ./source_files/transpile_parallel.py\n"
-     ]
-    }
-   ],
-   "source": [
-    "%%writefile --append ./source_files/transpile_parallel.py\n",
-    "\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
-    "from qiskit_serverless_tools.selectors import IBMLeastBusyQPUSelector\n",
-    "\n",
-    "backend = IBMLeastBusyQPUSelector(service).get_backend(min_num_qubits=127)\n",
-    "pm = generate_preset_pass_manager(optimization_level=3, backend=backend)\n",
-    "target_circuit = pm.run(abstract_circuit)"
    ]
   },
   {
@@ -450,7 +349,7 @@
     "# Create a tar\n",
     "filename = \"transpile_demo.tar\"\n",
     "file = tarfile.open(filename,\"w\")\n",
-    "file.add(\"./source_files/transpile_parallel.py\")\n",
+    "file.add(\"./source_files/transpile_remote.py\")\n",
     "file.close()\n",
     "\n",
     "# Upload the tar to Serverless data directory\n",
@@ -506,20 +405,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Appending to ./source_files/transpile_parallel.py\n"
+      "Appending to ./source_files/tarfile_example.py\n"
      ]
     }
    ],
    "source": [
-    "%%writefile --append ./source_files/transpile_parallel.py\n",
+    "%%writefile ./source_files/extract_tarfile.py\n",
     "\n",
     "import tarfile\n",
+    "from qiskit_serverless import IBMServerlessClient\n",
     "\n",
+    "serverless = IBMServerlessClient()\n",
     "files = serverless.files()\n",
     "demo_file = files[0]\n",
     "downloaded_tar = serverless.file_download(demo_file)\n",
     "\n",
-    "print(downloaded_tar)\n",
     "with tarfile.open(downloaded_tar, 'r') as tar:\n",
     "    tar.extractall()"
    ]
@@ -548,16 +448,20 @@
    ],
    "source": [
     "# This cell is hidden from users.\n",
-    "# It uploads the serverless program and checks it runs.\n",
     "\n",
+    "# Upload the serverless program and checks it runs.\n",
     "test_serverless_job(\n",
     "    title=\"transpile_remote_serverless_test\",\n",
-    "    entrypoint=\"transpile_parallel.py\"\n",
+    "    entrypoint=\"extract_tarfile.py\"\n",
     ")\n",
     "\n",
     "# Clean up\n",
-    "Path(\"./source_files/transpile_parallel.py\").unlink()\n",
-    "Path(\"./transpile_demo.tar\").unlink()"
+    "Path(\"./source_files/transpile_remote.py\").unlink()\n",
+    "Path(\"./source_files/extract_tarfile.py\").unlink()\n",
+    "Path(\"./transpile_demo.tar\").unlink()\n",
+    "os.chdir(\"../\")\n",
+    "Path(\"./serverless-manage-resources-workspace/source_files\").rimdir()\n",
+    "Path(\"./serverless-manage-resources-workspace\").rimdir()"
    ]
   },
   {
