Added summary of serverless

--- a/docs/guides/intro-to-patterns.mdx
+++ b/docs/guides/intro-to-patterns.mdx
@@ -5,7 +5,7 @@ description: Qiskit patterns are the broad steps employed when running a domain-
 
 # Introduction to Qiskit patterns
 
-A Qiskit pattern is a general framework for breaking down domain-specific problems and contextualizing required capabilities in stages. This allows for the seamless composability of new capabilities developed by IBM Quantum&trade; researchers (and others) and enables a future in which quantum computing tasks are performed by powerful heterogenous (CPU/GPU/QPU) computing infrastructure. Blocks or groups of blocks perform the steps of a pattern, with the Qiskit SDK providing an important foundational layer, supported by other tools or services developed by IBM Quantum or the quantum open-source community. Qiskit patterns allow domain experts to specify a problem and compose the tooling (blocks) that achieves a Qiskit pattern. That pattern can then be executed locally, through cloud services, or deployed with Quantum Serverless.
+A Qiskit pattern is a general framework for breaking down domain-specific problems and contextualizing required capabilities in stages. This allows for the seamless composability of new capabilities developed by IBM Quantum&trade; researchers (and others) and enables a future in which quantum computing tasks are performed by powerful heterogenous (CPU/GPU/QPU) computing infrastructure. Blocks or groups of blocks perform the steps of a pattern, with the Qiskit SDK providing an important foundational layer, supported by other tools or services developed by IBM Quantum or the quantum open-source community. Qiskit patterns allow domain experts to specify a problem and compose the tooling (blocks) that achieves a Qiskit pattern. That pattern can then be executed locally, through cloud services, or deployed with Qiskit Serverless.
 
 
 The four steps of a Qiskit pattern are as follows:
@@ -56,7 +56,10 @@ As the field moves from bespoke circuit construction to utility-scale workflows,
 ## Guides demonstrating the Qiskit patterns workflow
 
 ### Qiskit Serverless
-* [Qiskit Serverless overview](./serverless)
+
+[Qiskit Serverless](./serverless) allows users to deploy workloads to a cloud environments, allowing for local configuration and remote execution. Premium users have access to quantum-classical compute resources to build and deploy their own workloads remotely. Instances of Qiskit Serverless can also be deployed to other cloud environments. Check out the package's [documentation](https://qiskit.github.io/qiskit-serverless/index.html) for more information.
+
+* [Overview of Qiskit Serverless](./serverless)
 * [Write your first Qiskit Serverless program](./serverless-first-program)
 * [Run your first Qiskit Serverless workload remotely](./serverless-run-first-workload)
 * [Manage Qiskit Serverless compute and data resources](./serverless-manage-resources)
