--- a/docs/guides/qiskit-code-assistant-jupyterlab.mdx
+++ b/docs/guides/qiskit-code-assistant-jupyterlab.mdx
@@ -51,7 +51,7 @@ Other settings you might want to change:
 
 - You can change the IBM Quantum API token to use in the JupyterLab command palette. To do that, type `Alt` + `Shift` + `C`, search for `qiskit`, select the **Qiskit Code Assistant: Set IBM Quantum API token** command, and paste in your token.
 
-- [Advanced] To change the instance of Qiskit Code Assistant Service that the extension should use, edit Qiskit Code Assistant `serviceUrl` setting.
+- [Advanced] To change the instance of the Qiskit Code Assistant service that the extension should use, edit Qiskit Code Assistant `serviceUrl` setting.
 
 - [Advanced] Keyboard shortcuts can be changed by searching for `completer` in the Keyboard Shortcuts settings (Settings -> Settings Editor -> Keyboard Shortcuts) and adding new shortcuts for the relevant commands.
 
