--- a/docs/guides/qiskit-code-assistant-jupyterlab.mdx
+++ b/docs/guides/qiskit-code-assistant-jupyterlab.mdx
@@ -117,7 +117,7 @@ The context menu includes suggestions from JupyterLab in addition to suggestions
 ## Uninstall the JupyterLab extension
 
 
-To remove Qiskit Code Assistant extension from JupyterLab, run:
+To remove the Qiskit Code Assistant extension from JupyterLab, run:
 
 ```bash
 pip uninstall qiskit_code_assistant_jupyterlab
